Revisión de la coherencia entre api.yaml y servicios locales
git-svn-id: http://jira.uji.es/repos/uji/GOC/goc/trunk@32574 e6edf6fb-f266-4316-afb4-e53d95876a76
